2011-10-06  Marcus Brinkmann  <marcus@g10code.com>

	* Initial version.
