@@ -20,35 +20,34 @@
 
 EXPORTS
     npth_init				@1
-    npth_mutex_init			@
-    _npth_mutex_lock			@
-    _npth_mutex_timedlock		@
-    _npth_rwlock_rdlock			@
-    _npth_rwlock_timedrdlock		@
-    _npth_rwlock_wrlock			@
-    _npth_rwlock_timedwrlock		@
-    npth_cond_wait			@
-    npth_cond_timedwait			@
-    npth_usleep				@
-    npth_sleep				@
-    npth_waitpid			@
-    npth_system				@
-    npth_sigmask			@
-    npth_sigwait			@
-    npth_connect			@
-    npth_accept				@
-    npth_select				@
-    npth_pselect			@
-    npth_read				@
-    npth_write				@
-    npth_recvmsg			@
-    npth_sendmsg			@
+    _npth_mutex_lock			@2
+    _npth_mutex_timedlock		@3
+    _npth_rwlock_rdlock			@4
+    _npth_rwlock_timedrdlock		@5
+    _npth_rwlock_wrlock			@6
+    _npth_rwlock_timedwrlock		@7
+    npth_cond_wait			@8
+    npth_cond_timedwait			@9
+    npth_usleep				@10
+    npth_sleep				@11
+    npth_waitpid			@12
+    npth_system				@13
+    npth_sigmask			@14
+    npth_sigwait			@15
+    npth_connect			@16
+    npth_accept				@17
+    npth_select				@18
+    npth_pselect			@19
+    npth_read				@20
+    npth_write				@21
+    npth_recvmsg			@22
+    npth_sendmsg			@23
 
-    npth_sigev_init			@
-    npth_sigev_add			@
-    npth_sigev_fini			@
-    npth_sigev_sigmask			@
-    npth_sigev_get_pending		@
+    npth_sigev_init			@24
+    npth_sigev_add			@25
+    npth_sigev_fini			@26
+    npth_sigev_sigmask			@27
+    npth_sigev_get_pending		@28
 
 ; END
 
