@@ -1,3 +1,14 @@
+2011-10-07  Marcus Brinkmann  <marcus@g10code.com>
+
+	* src/npth.h (npth_mutexattr_t, npth_mutexattr_init)
+	(npth_mutexattr_destroy, npth_mutexattr_settype)
+	(npth_mutexattr_gettype, NPTH_MUTEX_NORMAL, NPTH_MUTEX_RECURSIVE)
+	(NPTH_MUTEX_ERRORCHECK, NPTH_MUTEX_DEFAULT): New.
+	* src/npth.c (npth_mutex_init): Removed.
+	* src/libnpth.vers: Remove npth_mutex_init.
+	* src/npth.def: Likewise.  Add missing numbers.
+	* tests/t-mutex.c: Adjust to new interface.
+
 2011-10-06  Marcus Brinkmann  <marcus@g10code.com>
 
 	* Initial version.
